# airflow-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test librerias.sh
.github/workflows/: lint-and-test.yml  publish-package.yml  publish-to-pypi.yml  publish.yml
scripts/: update_version.py
src/: data_lake_facade.py
src/airflow_toolkit/: compression_utils.py  data_lake_facade.py  exceptions.py
src/airflow_toolkit/filesystems/: filesystem_factory.py  filesystem_protocol.py
src/airflow_toolkit/filesystems/impl/: azure_databricks_volume_filesystem.py  azure_file_share_filesystem.py  blob_storage_filesystem.py  google_cloud_storage_filesystem.py  local_filesystem.py  s3_filesystem.py  sftp_filesystem.py
src/airflow_toolkit/notifications/slack/: webhook.py
src/airflow_toolkit/providers/: package.py
src/airflow_toolkit/providers/azure/hooks/: azure_databricks.py  azure_file_share.py
src/airflow_toolkit/providers/data_lake/operators/: data_lake.py
src/airflow_toolkit/providers/deltalake/operators/: duckdb_to_deltalake.py  filesystem_to_database.py
src/airflow_toolkit/providers/deltalake/sensors/: filesystem_file.py
src/airflow_toolkit/providers/filesystem/: tasks.py
src/airflow_toolkit/providers/filesystem/operators/: filesystem.py  http_to_filesystem.py
src/airflow_toolkit/providers/http_to_data_lake/operators/: http_to_data_lake.py
src/airflow_tools/: compression_utils.py  data_lake_facade.py  exceptions.py
src/airflow_tools/data_lake_filesystems/: data_lake_factory.py  data_lake_protocol.py
src/airflow_tools/data_lake_filesystems/impl/: blob_storage_data_lake.py  s3_data_lake.py  sftp_data_lake.py
src/airflow_tools/filesystems/: filesystem_factory.py  filesystem_protocol.py
src/airflow_tools/filesystems/impl/: azure_databricks_volume_filesystem.py  azure_file_share_filesystem.py  blob_storage_filesystem.py  google_cloud_storage_filesystem.py  local_filesystem.py  s3_filesystem.py  sftp_filesystem.py
src/airflow_tools/hooks/: azure_fileshare_service_principal.py
src/airflow_tools/notifications/slack/: webhook.py
src/airflow_tools/providers/: package.py
src/airflow_tools/providers/azure/hooks/: azure_databricks.py  azure_file_share.py
src/airflow_tools/providers/data_lake/operators/: data_lake.py
src/airflow_tools/providers/deltalake/operators/: duckdb_to_deltalake.py  filesystem_to_database.py
src/airflow_tools/providers/deltalake/sensors/: filesystem_file.py
src/airflow_tools/providers/filesystem/: tasks.py
src/airflow_tools/providers/filesystem/operators/: filesystem.py  http_to_filesystem.py
src/airflow_tools/providers/http_to_data_lake/operators/: http_to_data_lake.py  http_to_data_lake_pagination.py
src/airflow_tools/providers/partitions/operators/: partitions.py
src/providers/: package.py
src/providers/http/operators/: http.py
tests/: conftest.py
tests/integration/: conftest.py  test_data_lake.py  test_filesystem_file_sensor.py  test_filesystem_operators.py  test_filesystem_to_database.py  test_gcs_filesystem.py  test_http_to_data_lake.py  test_http_to_data_lake_pagination.py  test_http_to_filesystem.py  test_library_installation.py  test_montel_api.py  test_partitions.py  test_sftp.py  test_sql_to_filesystem.py
tests/unit/: test_azure_fileshare_service_principal.py  test_compression.py  test_filesystem_tasks.py
tests/unit/notifications/slack/: test_slack_notification.py
