[tool.poetry]
name = "airflow-tools"
version = "0.10.0"

description = ""
authors = ["Biel Llobera <biel_llobera@dkl.digital>"]
readme = "README.md"
include = ["src/airflow_tools"]

[tool.poetry.dependencies]
airflow-provider-duckdb = "^0.2.0"
apache-airflow = ">=2.8.0,<=2.9.1"
apache-airflow-providers-amazon = "~9.0.0"
apache-airflow-providers-google = "10.23.0"
apache-airflow-providers-microsoft-azure = "^8.0.0"
apache-airflow-providers-sftp = "^4.8.1"
apache-airflow-providers-slack = "^8.5.1"
boto3 = "^1.34.8"
boto3-stubs = "^1.34.8"
databricks-sdk = "^0.21.0"
databricks-sql-connector = "^2"
deltalake = "^0.17.4"
flask-session = "0.5.0"
jmespath = "^1.0.1"
pandas = "^2.1.1"
pandas-stubs = "^2.1.4.231218"
pendulum = "^2.1.2"
python = ">=3.9,<3.12"
sqlalchemy = "1.4.54"
toml = "^0.10.2"
types-jmespath = "^1.0.2.7"
types-toml = "^0.10.8.7"

[tool.poetry.plugins."apache_airflow_provider"]
"provider_info" = "airflow_tools.providers.package:get_provider_info"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.0"
isort = "^5.12.0"
mypy = "^1.8.0"
ipdb = "^0.13.13"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
werkzeug = "<3.0.0"
connexion = "^2.14.2"
boto3 = "^1.28.67"
pytest-mock = "^3.12.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
skip-string-normalization = true

[tool.mypy]
allow_redefinition = true
